# LightGameEngine

./: pyproject.toml  readme.md
light_game_engine/: __init__.py  light_game_engine.py
light_game_engine/engines/core/: game_screen.py  game_status.py  scene_management.py
